--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,14 +14,17 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
 </head>
+
 <body>
     <div class="container">
-    <div class="description">I always make it in a cool and high quality way, and it’s just impossible for me to make otherwise</div>
-    <div class="wrapper">
-        <a href="https://t.me/alexeyfilatov_1" target="_blank" class="link">Telegram</a>
-        <a href="https://github.com/FilatovAlexey" target="_blank" class="link">GitHub</a>
-        <a href="https://career.habr.com/aleksey-filatov-front" target="_blank" class="link">Habr</a>
+        <div class="wrapper">
+            <p class="description">Есть вещи, которые невозможно увидеть сразу, 
+                <a href="https://t.me/alexeyfilatov_1" class="hidden-link">но они могут изменить вашу жизнь
+                </a>
+            </p>
+        </div>
     </div>
-</div>
+    </div>
 </body>
+
 </html>
